  . It is now possible to use reference assign on WeakMap without the key
    needing to be present beforehand. (ndossche)

- Hash:
  . Upgrade xxHash to 0.8.2. (timwolla)

- Intl:
  . Added IntlNumberRangeFormatter class to format an interval of two numbers
    with a given skeleton, locale, collapse type and identity fallback.
    (BogdanUngureanu)
  . Fixed bug GH-20426 (Spoofchecker::setRestrictionLevel() error message
    suggests missing constants). (DanielEScherzer)

- Fibers:
  . Fixed bug GH-20483 (ASAN stack overflow with fiber.stack_size INI
    small value). (David Carlier)

- Mbstring:
  . ini_set() with mbstring.detect_order changes the order of mb_detect_order
    as intended, since mbstring.detect_order is an INI_ALL setting. (tobee94)

- Opcache:
  . Fixed bug GH-20051 (apache2 shutdowns when restart is requested during
    preloading). (Arnaud, welcomycozyhom)

- Phar:
  . Support reference values in Phar::mungServer(). (ndossche)
  . Invalid values now throw in Phar::mungServer() instead of being silently
    ignored. (ndossche)

- Reflection:
  . Fixed bug GH-20217 (ReflectionClass::isIterable() incorrectly returns true
    for classes with property hooks). (alexandre-daubois)

- Soap:
  . Soap::__setCookie() when cookie name is a digit is now not stored and represented
    as a string anymore but a int. (David Carlier)

- Standard:
  . Fixed bug GH-19926 (reset internal pointer earlier while splicing array
    while COW violation flag is still set). (alexandre-daubois)

- Streams:
  . Added so_reuseaddr streams context socket option that allows disabling
    address resuse.
  . Fixed bug GH-20370 (User stream filters could violate typed property
    constraints). (alexandre-daubois)

- Zip:
  . Fixed ZipArchive callback being called after executor has shut down.
    (ilutov)
  . Support minimum version for libzip dependency updated to 1.0.0.
    (David Carlier)

<<< NOTE: Insert NEWS from last stable release here prior to actual release! >>>